--- a/student.html
+++ b/student.html
@@ -106,6 +106,9 @@
      
     <div class="actions">
       <button class="logout-btn" onclick="window.location.href='medicine.html'">📖 MEDICINE </button>
+      <button class="logout-btn" onclick="window.location.href='reader.html'">📖 READ</button>
+      <button class="logout-btn" onclick="window.location.href='revision.html'">📖 REVISION </button>
+
       
       <button class="logout-btn" onclick="window.location.href=''">🧪 Practical Corner</button>
       <button class="logout-btn" onclick="window.location.href=''">📝 Notes Corner</button>
